kubernetes/apps/home-automation/tnorbert-blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tnorbert-blog
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tnorbert-blog
  template:
    metadata:
      labels:
        app: tnorbert-blog
        nfsMount: "true"
    spec:
      containers:
        - name: tnorbert-blog
          # command: [ "tail", "-f", "/dev/null" ]
          image: ghcr.io/bokker/tnorbert-blog:1.0.104 # {"$imagepolicy": "home-automation:tnorbert-blog"}
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 300
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - mountPath: /home/node/app/media
              subPath: tnorbert-blog
              name: unraid-storage
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: unraid-storage
          persistentVolumeClaim:
            claimName: unraid-un-nvme-pvc
