kubernetes/apps/home-automation/tnorbert-blog/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tnorbert-blog
  namespace: home-automation
spec:
  type: ClusterIP
  ports:
    - port: 5540
      protocol: TCP
      name: web-ui
      targetPort: 5540
  selector:
    app: tnorbert-blog
